# TruLedgr

./: .env.dev  .env.example  .env.local.example  .env.prod  .env.stage  .env.test  .eslintrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  Dockerfile  FINANCE_FEATURES_IMPLEMENTATION_LIST.md  LICENSE  MIGRATION_WORKFLOW.md  MOBILE_APPS_README.md  PACKAGE_SETUP.md  README-API.md  README-Android.md  README-Apple.md  README-Dash.md  README-Land.md  README.md  SECURITY.md  SECURITY_FEATURES_IMPLEMENTATION_LIST.md  SUPPORT.md  TODO.md  USER_GUIDE.md  WORKSPACE_SETUP.md  __init__.py  _headers  alembic.ini  api-only.yaml  app-platform.yaml  app-simple.yaml  build.sh  (+36 more)
.do/: .doignore  MIGRATION_STRATEGY.md  README.md  api-app-spec-full.json  app-spec.yml  app-spec.yml.bak  app.yaml  dash-app.yaml  dashboard-app-spec.json  truledgr-api-staging.yml  truledgr-api.yml  truledgr-dash-staging.yml
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  config.yml  documentation.md  feature_request.md  performance.md
.github/workflows/: changelog-suggest.yml  ci-cd.yml  deploy-dash.yml  deploy-docs.yml  deploy-land.yml  deploy-landing.yml  deploy-mkdocs.yml  deploy.yml  docs.yml  landing.yml  main-ci.yml  pr-ci.yml  www.yml
android/: .gitignore  ANDROID_STUDIO_SETUP.md  build.gradle  reset-android-studio.sh
android/app/: build.gradle.kts
api/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  deps.py  fly.toml  init_db.py  main.py  requirements.txt  run_migrations.py  start.sh  templates.py
api/.do/: app.yaml
api/accounts/: __init__.py  models.py  router.py  schemas.py  service.py
api/activities/: README.md  __init__.py  crud.py  models.py  router.py  schemas.py  service.py
api/authentication/: __init__.py  deps.py  router.py  schemas.py  service.py
api/authorization/: __init__.py  models.py  policy.py  service.py
api/common/: __init__.py  deps.py  exceptions.py  models.py  ulid_utils.py  utils.py
api/config/: env.py  settings.py
api/db/: __init__.py  base.py  deps.py  seed.py  session.py
api/dependencies/: __init__.py  auth.py  database.py  pagination.py
api/entities/: __init__.py  oauth_connection.py  user.py
api/groups/: crud.py  models.py  router.py  schemas.py  service.py
api/institutions/: __init__.py  models.py  router.py  schemas.py  service.py
api/items/: __init__.py  crud.py  models.py  router.py  service.py
api/migrations/: MULTI_HOST_STRATEGY.md  QUICK_REFERENCE.md  README.md  __init__.py  env.py  lock_manager.py  remove_is_business.py  startup_integration.py
api/plaid/: __init__.py  models.py  router.py  service.py  service_backup.py
api/repositories/: __init__.py  base.py  oauth_connection.py  oauth_connection_repository.py  (+5 more)
apple/: .gitignore  Package.swift
assets/: index-CCoqZEyy.js  index-DmNs2cPW.js  index-Do0rvUMw.css  index-snB7VWuo.css  vendor-DFSNdk86.js
backend/: fly.toml
dash/: .env.production  .gitignore  App.vue  App.vue.js  index.html  main.d.ts  main.js  main.ts  package-lock.json  package.json  style.css  vite.config.ts
dashboard/: .eslintrc.json  README.md  index.html  package-lock.json  package.json
docs/: .gitignore  ADDED_USERNAME_FIELD.md  API_AUTHENTICATION_COMPLETE.md  API_CONFIG_ENDPOINT.md  API_CONFIG_ENDPOINT_SUMMARY.md  API_SETUP_GUIDE.md  AUTHENTICATION_GUIDE.md  AUTHENTICATION_STATUS.md  MOBILE_APPS_README.md  OAUTH_CALLBACK_IMPLEMENTATION.md  OAUTH_IMPLEMENTATION.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_JIT_PROVISIONING.md  OAUTH_QUICK_REFERENCE.md  REFACTORING_SUMMARY.md  REMOVED_IS_BUSINESS.md  USER_MANAGEMENT_API.md  USER_MANAGEMENT_COMPLETE.md  USER_MANAGEMENT_SUMMARY.md  api-landing-page.md  api-url-cleanup.md  deployment-guide.md  deployment.md  domain-routing-fix.md  frontend-deployment.md  github-pages-alternatives.md  index.md  mkdocs-setup.md  mkdocs.yml  mobile-integration.md  project-structure.md  support.md  tags.md  versioning.md
frontend/: .env.development  fly.toml
functions/: _middleware.js
landing/: .eslintrc.json  .gitignore  CLOUDFLARE_CONFIG.md  DEPLOYMENT.md  README.md  build-simple.sh  cloudflare-pages.yml  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts  wrangler.toml
migrations/: env.py
old/: .dockerignore  .env  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  SECURITY.md  mkdocs.yml
old/backend/: pyproject.toml  requirements.txt  sqlite.db
old/backend/alembic/: env.py
old/backend/alembic/versions/: 25630f60ad9c_initial.py
old/backend/truledgr/: main.py
old/backend/truledgr/api/: deps.py  main.py
old/backend/truledgr/api/routes/: items.py  login.py  private.py  users.py  utils.py
old/backend/truledgr/core/: config.py  crud.py  db.py  security.py  utils.py
proxy/: Dockerfile  fly.toml  traefik.yml
scripts/: README.md  build.sh  deploy-do.sh  deploy-docs.sh  deploy-production.sh  deploy.sh  generate_erd.py  migrate.py  migrate_complete_schema.py  migrate_session_tables.py  poetry-lock-check.sh  preflight_api.sh  preflight_dash.sh  preflight_docs.sh  preflight_land.sh  prepare_for_alembic.py  run_api.sh  run_dash.sh  run_docs.sh  run_land.sh  set-env.sh  test-redirect.sh  test_session_api.py  test_session_management.py  test_session_management_clean.py  test_session_simple.py  validate-migration.sh  version.py
tests/: conftest.py  test_auth_flows.py  test_auth_module.py  test_e2e.py  test_monitoring.py  test_performance.py  test_user_integration.py  test_user_service.py  test_users.py
tools/: __init__.py  dev_server.py  launchers.py
truledgr-api/: .gitignore
truledgr-apple/: README.md
truledgr-dash/: README.md  package-lock.json  package.json
truledgr-docs/: README.md  mkdocs.yml
truledgr-land/: README.md  package.json  vite.config.ts
www/: .gitignore  DEPLOYMENT.md  _headers  _redirects  build.sh  cloudflare-pages.md  index.html  package-lock.json  test.html  vercel.json
(+458 files in other folders)
